--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "url": "http://github.com/gambtho/bookcase.git"
   },
   "scripts": {
-    "test": "mocha tests --recursive"
+    "test": "mocha test --recursive",
+    "db": "mongod --fork --logpath /var/log/mongod.log"
   },
   "author": "Thomas Gamble",
   "license": "Apache-2.0",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
     "mocha": "^2.4.5",
     "nock": "^7.2.2"
   },
@@ -21,5 +23,9 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.6"
+  },
+  "engines": {
+    "node": "^5.7.1",
+    "npm": "^3.8.1"
   }
 }
