--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "mocha test --recursive",
-    "db": "mongod --fork --logpath /var/log/mongod.log"
+    "db": "mongod --fork --logpath /var/log/mongod.log",
+    "prestart": "./seed.sql bookcase root password"
   },
   "author": "Thomas Gamble",
   "license": "Apache-2.0",
@@ -22,7 +23,8 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.6"
+    "mongoose": "^4.4.6",
+    "mysql": "^2.10.2"
   },
   "engines": {
     "node": "^5.7.1",
